<resources>
    <string name="app_name">CTRLTeam</string>
    <string name="app_desc">©CTRLTeam, 2020. Control &amp; Manage \n Your Team.</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="image">image</string>
    <string name="title_activity_home_screen_">HomeScreen_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_main_share">Sharing</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="account_info">Account Info</string>
    <string name="name">Name</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter message</string>
    <string name="pp_receiver">PP Receiver</string>
    <string name="john_doe">John Doe</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="time_sample">11:40</string>
    <string name="list_chat">List Chat</string>
    <string name="online">Online</string>
    <string name="mobile_online">Online on mobile</string>
    <string name="away">Away</string>
    <string name="busy">Busy</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="do_not_disturb_on_presentation">On presentation</string>
    <string name="offline">Offline</string>
    <string name="what_s_new">What\'s New</string>
    <string name="contact">Contact</string>
    <string name="product">Product</string>
    <string name="project">Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_hello">hello, hello!</string>
    <string name="_11_40">11:40</string>
    <string name="button_chatbox_file">button chatbox file</string>
    <string name="download">Download</string>
    <string name="list_contact">List Contact</string>
    <string name="_0">0%</string>
    <string name="progress_download">Progress download…</string>
    <string name="progress_upload">Progress Upload…</string>
    <string name="progress_deleted">Progress Deleted…</string>
    <string name="progress_inviting">Progress Inviting…</string>
    <string name="progress_creating">Progress Creating…</string>
    <string name="show_all_file">Show All File</string>
    <string name="decline_user">Decline Contact</string>
    <string name="show_all_member">Show All Member</string>
    <string name="list_members">List Members</string>
    <string name="list_files">List Files</string>
    <string name="delete_description">Delete File</string>
    <string name="download_description">Download File</string>
    <string name="name_aplikasi">Sharebook</string>
    <string name="icon_close">Icon Close</string>
    <string name="invite_member">Invite Member</string>
    <string name="project_name">Project Name…</string>
    <string name="project_desc">Project Description…</string>
    <string name="click_here_to_avatar">Click here to choose avatar from your galery.</string>
    <string name="write_your_description_project_here">Write your project description here.</string>
    <string name="write_your_name_project_here">Write your project name here.</string>
    <string name="form_new_project">Form New Project</string>
    <string name="form_invite_user">Invite Contact</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="_1_member">1 member</string>
    <string name="logout">Logout</string>
    <string name="logoutLoad">Logout..</string>
    <string name="absent_team">Attendance</string>
    <string name="example_title_new">One Piece: Koneksi Im Sama, dan Takdir Luffy</string>
    <string name="example_desc_news">Berbicara mengenai apa yang terjadi di masa lalu memang t…</string>
    <string name="_3_jam_yang_lalu">beberapa waktu yang lalu</string>
    <string name="schedule">Schedule</string>
    <string name="main_menu">Main menu</string>
    <string name="hai">Hai,</string>
    <string name="action_settings">Setting</string>
    <string name="subscribe">Subscribe</string>
    <string name="channel_info">Channel Info</string>
    <string name="topic">Topic</string>
    <string name="see_more">See more</string>
    <string name="list_new_channel">List Channel News</string>
    <string name="follow">Follow</string>
    <string name="favorite_news">Favorite News</string>
    <string name="files">Files</string>
</resources>
