<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_channel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            style="@style/headerText"
            android:text="@string/channel_info"
            android:layout_marginBottom="20dp"/>

        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/nameImageView"
                android:src="@drawable/ic_name"
                style="@style/profileDetailsImage"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/nameTextView"
                style="@style/profileDetailsTextMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/nameImageView"
                android:text="@string/name" />

            <TextView
                android:id="@+id/channel_name"
                android:text=""
                android:layout_toEndOf="@id/nameImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/mobileImageView"
                android:src="@drawable/ic_mobile"
                style="@style/profileDetailsImage"
                android:contentDescription="@string/todo" />

            <TextView
                android:text="@string/topic"
                android:layout_toEndOf="@id/mobileImageView"
                style="@style/profileDetailsTextMain"/>

            <TextView
                android:id="@+id/channel_topic"
                android:text=""
                android:layout_toEndOf="@id/mobileImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>