<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    android:background="@drawable/login_bk"
    tools:context=".activity.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <RelativeLayout
            style="@style/parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">

                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/app_name"
                    android:textColor="@color/loginBkColor" />

                <include layout="@layout/layout_login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/app_desc"
                    android:textColor="@color/loginBkColor" />

            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/icon_close" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
