<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="3dp"
    android:paddingBottom="0dp">

    <android.support.v7.widget.CardView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:elevation="12dp"
        android:id="@+id/card_view_image"
        app:cardCornerRadius="16dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_height="32dp"
            android:layout_width="match_parent"
            android:id="@+id/image_message_profile"
            android:layout_alignParentTop="true"
            android:background="@drawable/profile_bk"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo">
        </ImageView>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/text_message_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textSize="10sp"
        app:layout_constraintLeft_toRightOf="@+id/card_view_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
        app:layout_constraintLeft_toRightOf="@+id/card_view_image"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:background="@drawable/rounded_rectangle_orange"
        android:orientation="vertical">

        <ImageView
            android:layout_height="120dp"
            android:layout_width="120dp"
            android:src="@drawable/default_room_avatar"
            android:id="@+id/message_image"
            android:clickable="true"
            android:visibility="gone"
            android:background="@drawable/rounded_rectangle_image"
            android:contentDescription="@string/todo"
            android:focusable="true">
        </ImageView>

        <TextView
            android:id="@+id/text_message_body"
            android:text="@string/hi_man_how_are_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="240dp"
            android:textColor="#ffffff"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_sample"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/message_body"
        app:layout_constraintLeft_toRightOf="@+id/message_body" />

</android.support.constraint.ConstraintLayout>