<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GlobalChat_Activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/AppTheme.AppBarOverlay"
        app:titleTextColor="@color/whiteCardColor"
        app:navigationIcon="?attr/homeAsUpIndicator"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_conversations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/card_chatbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reyclerview_message_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:listitem="@layout/item_message_received" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_chatbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="22dp"
        android:background="#fff234"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:id="@+id/layout_chatbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_height="150dp"
                android:layout_width="match_parent"
                android:src="@drawable/default_room_avatar"
                android:id="@+id/message_image_preview"
                android:visibility="gone"
                android:background="@drawable/rounded_rectangle_image"
                android:contentDescription="@string/todo">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/button_chatbox_file"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:src="@drawable/ic_note_location"
                    android:onClick="chooseFile"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:focusable="true"
                    android:contentDescription="@string/button_chatbox_file" />

                <EditText
                    android:id="@+id/edittext_chatbox"
                    android:hint="@string/enter_message"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:maxLines="6"
                    android:inputType="text"
                    android:autofillHints="@string/send"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/button_chatbox_send"
                    android:textSize="14sp"
                    android:background="@drawable/send"
                    android:clickable="true"
                    android:onClick="sendMessage"
                    android:layout_width="30dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="8dp"
                    android:focusable="true" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <include layout="@layout/bg_progress_view"/>

</android.support.constraint.ConstraintLayout>